--- a/index.html
+++ b/index.html
@@ -91,15 +91,14 @@
 
 		      <div class="medium-8 columns">
             <img id="logo" src="img/logo.svg" />
-			      <h1>Dakota Access Pipeline</h1>
+			      <h1>Dakota Access Pipeline (DAPL)</h1>
 		      </div>
 
 		      <div class="medium-4 hide-for-small columns">
 
 			      <ul id="header-nav">
-				      <li><a href="#" class="button alert">Subscribe To Dakota Access Pipeline Spill Alerts</a></li>
-              <li><a href="#" class="button">Sunoco Corporate Malpractice Payouts</a></li>
-              <li><a href="#" class="button success"><strong>Having a Disaster Mitigation Plan</a></li>
+				      <li><a href="#" class="button alert large-expanded small-expanded expand">Subscribe To DAPL Spill Alerts</a></li>
+              <li><a href="#" class="button success large-expanded small-expanded expand"><strong>Having a Disaster Mitigation Plan</a></li>
 			      </ul>
 
 		      </div>
@@ -172,25 +171,69 @@
 		    <div class="row">
 			    <div class="large-8 columns home-facts">
 
-            <h2>The Dakota Access Pipeline Is Flat-Out Dangerous.</h2>
+            <h3>The Dakota Access Pipeline Is Flat-Out Dangerous.</h3>
 
-  					<p>The <strong>Dakota Access Pipeline</strong> is a new 1,172-mile pipeline that will connect the rapidly expanding Bakken and Three Forks production areas in North Dakota to Patoka, Illinois. The <strong>Dakota Access Pipeline</strong> will make it more profitable for Energy Transfer to ship crude oil from North Dakota to existing refineries. While cost-effective, the <strong>Dakota Access Pipeline</strong> is downright dangerous for North Dakotans &mdash; especially farmers and others who work off the land.</strong></p>
+  					<p>The <strong>Dakota Access Pipeline</strong> is a new 1,172-mile pipeline that will connect the rapidly expanding Bakken and Three Forks production areas in North Dakota to Patoka, Illinois. The <strong>Dakota Access Pipeline</strong> will make it more profitable for Energy Transfer to ship crude oil from North Dakota to existing refineries. While cost-effective, the <strong>Dakota Access Pipeline</strong> is downright dangerous for North Dakotans &mdash; especially farmers and others who work off the land.</p>
 
             <h3>The Dakota Access Pipeline Spill Will Ruin North Dakota's Water Forever</h3>
   					<p>The Dakota Access Pipeline will transport approximately 470,000 barrels per day with a capacity as high as 570,000 barrels per day or more – which could represent approximately half of Bakken current daily crude oil production. <strong>In the event of a spill, all of this oil would be likely to seep into the groundwater of North Dakota, ruining agricultural endeavors and poisoning residents.</strong></p>
-  					<p>Depending upon regulatory approvals, the pipeline is projected to be in service by the fourth quarter of 2016.</p>
-
-					<h3>Quick Facts About Dakota Access Pipeline</h3>
-					<p>
-            <img class="left" src="img/supply-thumb.jpg" alt="supply"/>
-            <a href="resources/faq.html">
-              The Dakota Access Pipeline will connect the Bakken and Three Forks production areas in North Dakota to existing pipelines in Illinois.</a> The <strong>Dakota Access Pipeline</strong> will make it more profitable for Energy Transfer to ship crude oil from North Dakota to existing refineries. While cost-effective, the <strong>Dakota Access Pipeline</strong> is downright dangerous for North Dakotan families. Depending upon regulatory approvals, the pipeline is projected to be in service by the fourth quarter of 2016.
-            </a>
-          </p>
-					<p><img class="left" src="img/land-thumb.jpg" alt="landowners"/><a href="resources/faq.html">Protecting landowner interests and the local environment is a top priority of the Dakota Access Pipeline project.</a> As an operating principle, Dakota Access Pipeline is committed to working with individual landowners to make accommodations, minimize disruptions, and achieve full restoration of impacted land.  We will listen to and address questions from the community, landowners and other interested stakeholders about the project, proposed routes, landowner communications and more.  It is our intent to live up to our promises of openness, honesty and responsiveness before, during and after construction and throughout operations.</p>
-					<p><img class="left" src="img/safety-thumb.jpg" alt="safety"/><a href="resources/faq.html">The Dakota Access Pipeline will employ new advanced pipeline technology to ensure safety and reliability.  </a>  Pipelines are the safest mode of transporting crude oil, according to statistics from the U.S. Department of Transportation. But there are always opportunities to improve on that record. Today’s crude oil pipelines are designed to exceed stringent federal safety standards. Dakota Access will be built and operated using the most advanced technology and monitoring systems to make it even safer.</p>
-					<p><a href="about/overview.html">Click here to find out more about the Dakota Access Pipeline Project.</a></p>
-					<p><em><strong>National Benefits</strong></em></p>
+  					<p>Depending upon regulatory approvals, the <strong>Dakota Access Pipeline</strong> is projected to be in service by the fourth quarter of 2016.</hp>
+          </div>
+          <div id="side-nav-wrapper" class="large-4 columns">
+				    <div id="side-nav">
+				      <ul>
+					    <li><h5><em>Quick Links</em></h5></li>
+				        <li><a href="resources/faq.html">Frequently Asked Questions</a></li>
+				        <li><a href="about/fact-sheet.html">Fact Sheet</a></li>
+				        <li><a href="about/route.html">The Route</a></li>
+				        <li><a href="news/press-releases.html">Press Releases</a></li>
+				        <li><a href="contact/contact.html">Contact Us</a></li>
+			      	  </ul>
+				    </div>
+            <img src="img/water.jpg" alt="Questions About Water Safety and the Dakota Access Pipeline (DAPL)" />
+			    </div>
+		    </div>
+        </div>
+        <div id="quick-facts" class="row">
+          <div class="large-12 columns">
+					  <h3>Quick Facts About Dakota Access Pipeline (DAPL)</h3>
+            <hr>
+          </div>
+        </div>
+          <div class="row">
+            <div class="medium-4 columns">
+              <div class="callout info">
+                <img class="expand" src="img/supply-thumb.jpg" alt="supply" />
+  					    <p>
+                  <a href="resources/faq.html">
+                    The Dakota Access Pipeline will connect the Bakken and Three Forks production areas in North Dakota to existing pipelines in Illinois.</a> The <strong>Dakota Access Pipeline</strong> will make it more profitable for Energy Transfer to ship crude oil from North Dakota to existing refineries. While cost-effective, the <strong>Dakota Access Pipeline</strong> is downright dangerous for North Dakotan families. Depending upon regulatory approvals, the pipeline is projected to be in service by the fourth quarter of 2016.
+                  </a>
+                </p>
+              </div>
+            </div>
+            <div class="medium-4 columns">
+              <div class="callout info">
+                <img class="expand" src="img/land-thumb.jpg" alt="supply"/>
+  					    <p>
+                  <a href="resources/faq.html">Protecting landowner interests and the local environment is a top priority of the Dakota Access Pipeline project.</a> As an operating principle, Dakota Access Pipeline is committed to working with individual landowners to make accommodations, minimize disruptions, and achieve full restoration of impacted land.  We will listen to and address questions from the community, landowners and other interested stakeholders about the project, proposed routes, landowner communications and more.  It is our intent to live up to our promises of openness, honesty and responsiveness before, during and after construction and throughout operations.
+                </p>
+              </div>
+            </div>
+            <div class="medium-4 columns">
+              <div class="callout info">
+                <img class="expand" src="img/safety-thumb.jpg" alt="supply" style="width:100%!important;display:block;"/>
+  					    <p><a href="resources/faq.html">The Dakota Access Pipeline will employ new advanced pipeline technology to ensure safety and reliability.</a> Pipelines are the safest mode of transporting crude oil, according to statistics from the U.S. Department of Transportation. But there are always opportunities to improve on that record. Today’s crude oil pipelines are designed to exceed stringent federal safety standards. Dakota Access will be built and operated using the most advanced technology and monitoring systems to make it even safer.</p>
+              </div>
+            </div>
+          </div>
+          <div id="more-stuff" class="row">
+            <div class="large-12 columns">
+					<p class="find-out-more"><a href="about/overview.html" class="button alert">Click here to find out more about the dangers of the Dakota Access Pipeline Project.</a></p>
+					<h4>The federal permit is not final.</h4>
+            <p>Three federal agencies issued a joint statement on September 9, explaining that:
+              <blockquote>“The Army will not authorize constructing the Dakota Access Pipeline on Corps land bordering or under Lake Oahe until it can determine whether it will need to reconsider any of its previous decisions regarding the Lake Oahe site.” <cite>https://bia.gov/cs/groups/public/documents/text/idc2-046005.pdf</cite></blockquote></p>
+          <h4>There are <underline>Safer</underline> ways to transport oil than the DAPL</h4>
+          <p> DAPL is no ordinary pipeline.  It is very large, with a 36 inch diameter and capacity of 570,000 barrels per day – it would significantly increase the total capacity of the pipelines crossing the Missouri River.  DAPL presents a far greater risk to the environment and public health than other, smaller liquid and natural gas lines.  Oil pipelines pose more risk to water supplies and have more construction impacts than other methods of transporting oil.</p>
 					<p>Increased domestic crude oil production translates into greater energy independence for the United States.</p>
 					<p>Although the United States is the third-largest producer in the world, we are the number one consumer of crude oil in the world. We need to close the gap between what we produce as a country and what we consume before we can be truly independent of foreign imports. While the U.S. produced 7.5 million barrels of crude oil per day in 2013, it still imported 7.7 million barrels per day in order to meet consumer demands. We need to close the gap between what we produce as a country and what we consume before we can be truly independent of foreign imports. Every barrel of oil produced in the United States directly displaces a barrel of foreign oil.</p>
 					<p>The North Dakota Bakken has witnessed a significant increase in the production of crude oil, from 309,000 barrels a day in 2010 to 1 million barrels a day in 2014. This energy will need reliable transportation networks to reach U.S. markets, and pipelines are the safest, most efficient means of accomplishing this task.</p>
@@ -203,36 +246,13 @@
 					<p>The project will also address transportation strains in the Upper Midwest created by the dramatic increase in crude oil production in North Dakota. A lack of rail cars to move grain out of South Dakota has magnified the problem. Tariffs on grain railcars have increased from $50 to nearly $1,400 per car. These cost increases can carve up to $1.00 from every bushel of corn shipped. The Bakken Pipeline will help ease transportation shortages for agriculture and other industries.</p>
 			    </div>
 
-			    <div class="large-4 columns">
-				    <div id="side-nav">
-				      <ul>
-					    <li><h5><em>Quick Links</em></h5></li>
-				        <li><a href="resources/faq.html">Frequently Asked Questions</a></li>
-				        <li><a href="about/fact-sheet.html">Fact Sheet</a></li>
-				        <li><a href="about/route.html">The Route</a></li>
-				        <li><a href="news/press-releases.html">Press Releases</a></li>
-				        <li><a href="contact/contact.html">Contact Us</a></li>
-			      	  </ul>
-				    </div>
-			    </div>
-		    </div>
-
 	    </div>
     </div>
 
     <footer>
 	    <div class="row">
 		    <div class="large-5 columns">
-				<p>Dakota Access Pipeline &copy; 2016 Energy Transfer Partners, L.P.</p>
-		    </div>
-
-		    <div class="large-7 columns">
-			      <ul id="footer-nav">
-			        <li><a href="index.html">Home</a></li>
-			        <li><a href="https://energytransfercareers.silkroad.com/" target="blank">Careers</a></li>
-			        <li><a href="contact/contact.html">Contact Us</a></li>
-			        <li><a href="http://www.energytransfer.com/terms_of_use.aspx" target="blank">Terms of Use</a></li>
-			      </ul>
+				<p>This informational campaign is brought to you by The Other 98%.</p>
 		    </div>
 	    </div>
     </footer>
