Added the overview page
plus small tweaks to index

--- a/index.html
+++ b/index.html
@@ -204,49 +204,26 @@
             <div class="medium-4 columns">
               <div class="callout info">
                 <img class="expand" src="img/supply-thumb.jpg" alt="supply" />
-  					    <p>
-                  <a href="resources/faq.html">
-                    The Dakota Access Pipeline will connect the Bakken and Three Forks production areas in North Dakota to existing pipelines in Illinois.</a> The <strong>Dakota Access Pipeline</strong> will make it more profitable for Energy Transfer to ship crude oil from North Dakota to existing refineries. While cost-effective, the <strong>Dakota Access Pipeline</strong> is downright dangerous for North Dakotan families. Depending upon regulatory approvals, the pipeline is projected to be in service by the fourth quarter of 2016.
-                  </a>
-                </p>
+                <h4>The DAPL federal permit is not final.</h4>
+                  <p>Three federal agencies issued a joint statement on September 9, explaining that:
+                    <blockquote>“The Army will not authorize constructing the Dakota Access Pipeline on Corps land bordering or under Lake Oahe until it can determine whether it will need to reconsider any of its previous decisions regarding the Lake Oahe site.” <cite>Army Joint Statement, http://bit.ly/2dveZRa</cite></blockquote></p>
               </div>
             </div>
             <div class="medium-4 columns">
               <div class="callout info">
                 <img class="expand" src="img/land-thumb.jpg" alt="supply"/>
-  					    <p>
-                  <a href="resources/faq.html">Protecting landowner interests and the local environment is a top priority of the Dakota Access Pipeline project.</a> As an operating principle, Dakota Access Pipeline is committed to working with individual landowners to make accommodations, minimize disruptions, and achieve full restoration of impacted land.  We will listen to and address questions from the community, landowners and other interested stakeholders about the project, proposed routes, landowner communications and more.  It is our intent to live up to our promises of openness, honesty and responsiveness before, during and after construction and throughout operations.
-                </p>
+                <h4>The Dakota Access Pipeline is Extremely Unsafe</h4>
+  					    <p>The <strong>Dakota Access Pipeline</strong> is no ordinary pipeline.  It is very large, with a 36 inch diameter and capacity of 570,000 barrels per day – it would significantly increase the total capacity of the pipelines crossing the Missouri River.  DAPL presents a far greater risk to the environment and public health than other, smaller liquid and natural gas lines.  Oil pipelines pose more risk to water supplies and have more construction impacts than other methods of transporting oil.</p>
               </div>
             </div>
             <div class="medium-4 columns">
               <div class="callout info">
-                <img class="expand" src="img/safety-thumb.jpg" alt="supply" style="width:100%!important;display:block;"/>
-  					    <p><a href="resources/faq.html">The Dakota Access Pipeline will employ new advanced pipeline technology to ensure safety and reliability.</a> Pipelines are the safest mode of transporting crude oil, according to statistics from the U.S. Department of Transportation. But there are always opportunities to improve on that record. Today’s crude oil pipelines are designed to exceed stringent federal safety standards. Dakota Access will be built and operated using the most advanced technology and monitoring systems to make it even safer.</p>
+                <img class="expand" src="img/safety-thumb.jpg" alt="supply" />
+                <h4>Dakota Access Pipeline is taking land, not asking for it.</h4>
+  					    <p><strong>Dakota Access Pipeline LLC</strong> has filed 23 condemnation suits against <strong>140 individuals</strong>, banks and a coal mine to gain easements through North Dakota.  Most of the suits were filed in December against landowners in Williams, Mountrail, McKenzie, Dunn, Mercer and Morton Counties. Places that are already being run down by destructive infrastructural development.</p>
               </div>
             </div>
           </div>
-          <div id="more-stuff" class="row">
-            <div class="large-12 columns">
-					<p class="find-out-more"><a href="about/overview.html" class="button alert">Click here to find out more about the dangers of the Dakota Access Pipeline Project.</a></p>
-					<h4>The federal permit is not final.</h4>
-            <p>Three federal agencies issued a joint statement on September 9, explaining that:
-              <blockquote>“The Army will not authorize constructing the Dakota Access Pipeline on Corps land bordering or under Lake Oahe until it can determine whether it will need to reconsider any of its previous decisions regarding the Lake Oahe site.” <cite>https://bia.gov/cs/groups/public/documents/text/idc2-046005.pdf</cite></blockquote></p>
-          <h4>There are <underline>Safer</underline> ways to transport oil than the DAPL</h4>
-          <p> DAPL is no ordinary pipeline.  It is very large, with a 36 inch diameter and capacity of 570,000 barrels per day – it would significantly increase the total capacity of the pipelines crossing the Missouri River.  DAPL presents a far greater risk to the environment and public health than other, smaller liquid and natural gas lines.  Oil pipelines pose more risk to water supplies and have more construction impacts than other methods of transporting oil.</p>
-					<p>Increased domestic crude oil production translates into greater energy independence for the United States.</p>
-					<p>Although the United States is the third-largest producer in the world, we are the number one consumer of crude oil in the world. We need to close the gap between what we produce as a country and what we consume before we can be truly independent of foreign imports. While the U.S. produced 7.5 million barrels of crude oil per day in 2013, it still imported 7.7 million barrels per day in order to meet consumer demands. We need to close the gap between what we produce as a country and what we consume before we can be truly independent of foreign imports. Every barrel of oil produced in the United States directly displaces a barrel of foreign oil.</p>
-					<p>The North Dakota Bakken has witnessed a significant increase in the production of crude oil, from 309,000 barrels a day in 2010 to 1 million barrels a day in 2014. This energy will need reliable transportation networks to reach U.S. markets, and pipelines are the safest, most efficient means of accomplishing this task.</p>
-					<p><em><strong>Local Economic Impact</strong></em></p>
-					<p>The Dakota Access Pipeline is a $3.7 billion investment that will create 8,000 to 12,000 local jobs during construction. Millions of hours of labor will be needed during the construction phase, putting welders, mechanics, electricians, pipefitters, heavy equipment operators and others within the heavy construction industry to work. There will also be increased demand for those who manufacture the steel pipes, fittings, valves, pumps and control devices necessary for a major pipeline, and local economies along the route will feel direct impact through the expanded use of hotels, motels, restaurants, and other services.</p>
-					<ul>
-						<li>The pipeline investment translates into millions in state and local revenues during the construction phase, estimated at $156 million in sales and income taxes.</li>
-						<li>The pipeline will generate an estimated $55 million annually in property taxes – for services to support schools, roads, emergency services and more.</li>
-					</ul>
-					<p>The project will also address transportation strains in the Upper Midwest created by the dramatic increase in crude oil production in North Dakota. A lack of rail cars to move grain out of South Dakota has magnified the problem. Tariffs on grain railcars have increased from $50 to nearly $1,400 per car. These cost increases can carve up to $1.00 from every bushel of corn shipped. The Bakken Pipeline will help ease transportation shortages for agriculture and other industries.</p>
-			    </div>
-
-	    </div>
     </div>
 
     <footer>
